vm/42sh_tester/public/input_logs/error_logs/42sh_24
42sh:1:16: [1m[91merror[0m: unexpected end of file
  1  |  { echo salut mec
     |                 [1m[91m^[0m
